<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_8"
        android:background="@color/colorPrimary"
        android:gravity="right"
        android:padding="@dimen/space_8"
        android:text="@string/movie_name"
        android:textColor="@color/red"
        android:textSize="@dimen/font_medium"
        android:textStyle="bold|italic"></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Insert movie name..."
        android:inputType="textCapWords"></EditText>

    <ImageView
        android:layout_width="64dp"
        android:layout_height="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/movieicon"></ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save"
        android:textColor="@android:color/white"></Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="@dimen/space_8"
        android:background="@color/colorPrimary"></View>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Terms and Conditions"></CheckBox>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Romanian"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="French"></RadioButton>
    </RadioGroup>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1"></RatingBar>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/oscar_winner"></Switch>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"></TextView>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="70"></SeekBar>
    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search"></SearchView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"></ProgressBar>

</LinearLayout>